# controller/auth.go
@@ -3,14 +3,10 @@ package controller
 import (
 	"github.com/appleboy/gin-jwt"
 	"github.com/gin-gonic/gin"
+	"gobeacon/model"
 	"gobeacon/service"
 	"time"
 )
-
-type login struct {
-	Email string `form:"email" json:"email" binding:"required"`
-	Password string `form:"password" json:"password" binding:"required"`
-}
 
 var identityKey = "private_claim_id"
 
@@ -34,9 +30,19 @@ func CreateAdminJWTMiddleware() (*jwt.GinJWTMiddleware) {
 	return authMiddleware
 }
 
-//авторизация пользователя
+// AuthorizeUser godoc
+// @Summary Авторизация пользователя
+// @Description Авторизация пользователя
+// @Accept json
+// @Produce json
+// @Param request body model.LoginRequest true "Логин пароль"
+// @Router /users/login [post]
+// @Success 200 {object} model.LoginResponse
+// @Failure 400 "err"
+// @Failure 500 "err"
+// @Tags Пользователи
 func getAuthenticator(c *gin.Context) (interface{}, error) {
-	var cred login
+	var cred model.LoginRequest
 	if err := c.ShouldBind(&cred); err != nil {
 		return "", jwt.ErrMissingLoginValues
 	}
