# controller/systemController.go
@@ -28,3 +28,40 @@ func HeartbeatPhone(c *gin.Context) {
 
 	sendResponse(err, c)
 }
+
+// HeartbeatPhone godoc
+// @Summary Загрузка аватарки по id
+// @Accept json
+// @Produce json
+// @Param id path string true "id аватарки"
+// @Router /avatar/{id} [get]
+// @Success 200 {object} model.AvatarResponse
+// @Failure 400 "err"
+// @Failure 500 "err"
+// @Tags Система
+func GetAvatar(c *gin.Context) {
+	id := c.Param("id")
+	result, err := service.GetAvatar(id)
+	sendObjResponse(result, err, c)
+}
+
+/*func GetAvatar(c *gin.Context) {
+	id := c.Param("id")
+	imgData, err := service.GetAvatar(id)
+	if err != nil {
+		c.AbortWithStatus(http.StatusInternalServerError)
+	}
+
+	header := c.Writer.Header()
+	header["Content-type"] = []string{"image/jpg"}
+	header["Content-Disposition"] = []string{"attachment; filename= " + id}
+
+	io.Copy(c.Writer, bytes.NewReader(imgData))
+}*/
+
+func TestPush(c *gin.Context) {
+	userId := getUserId(c)
+	service.SendPushNotification(userId)
+	sendResponse(nil, c)
+}
+
